--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,30 @@
-<div class="container mx-auto px-1 py-13 my-15 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen max-w-screen-lg">
+<div class="w-[90%] min-h-screen md:max-w-screen-lg container mx-auto px-1 py-13 my-15 bg-white shadow-sm shadow-2xs rounded-xl">
   <div class="mx-15">
-  <%= render "shared/object_error_messages", object: @post %>
+    <%= render "shared/object_error_messages", object: @post %>
   </div>
   <%= form_with model: @post do |f| %>
-    <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
-      <div>
-        <p class= "text-yellow-950">　</p>
-          <% if @post.persisted? %>
-            <%= image_tag (@post.image.variant(resize_to_fill: [360, 360])) %>
-          <% else %>
-          <div class="container h-90 w-90 flex items-center justify-center rounded-xl bg-gray-300">
+    <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
+      <div class="justify-items-center">
+        <% if @post.persisted? %>
+          <%= image_tag(@post.image.variant(resize_to_fill: [360, 360]), class:"rounded-xl") %>
+        <% else %>
+          <div class="container w-65 h-65 sm:h-95 sm:w-95 mx-auto flex items-center justify-center rounded-xl bg-gray-300">
             <p>ここに画像が入ります</p>
           </div>
         <% end %>
-        <div class="my-5">
+        <div class="my-5 flex flex-col">
           <%= f.label :image, class: "text-yellow-950 font-bold" %>
-          <%= f.file_field :image, accept: ".jpeg, .gif, .png, .jpg", class: "py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded w-full text-gray-500 cursor-pointer" %>
+          <%= f.file_field :image, accept: ".jpeg, .gif, .png, .jpg", class: "w-65 sm:w-100 py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded text-gray-500 cursor-pointer" %>
         </div>
       </div>
-      <div class="ml-8 mr-8 col-span-1 justify-items-center">
+
+      <div class="col-span-1 justify-items-center">
         <div class= "mb-5 flex flex-col">
           <div class= "flex font-bold">
             <%= f.label :title, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :title, class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md" %>
+          <%= f.text_field :title, class: "w-65 sm:w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -32,12 +32,12 @@
             <%= f.label :body, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_area :body, class: "w-100 bg-stone-50 px-2 border border-yellow-950 rounded-md", rows: "14" %>
+          <%= f.text_area :body, class: "w-65 sm:w-100 bg-stone-50 px-2 border border-yellow-950 rounded-md", rows: "14" %>
         </div>
 
         <div class="mb-5 flex flex-col">
           <%= f.label :tag_names, class: "text-yellow-950 font-bold" %>
-          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
+          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-65 sm:w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -45,7 +45,7 @@
             <%= f.label :spot, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :spot, id: "spot", class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
+          <%= f.text_field :spot, id: "spot", class: "w-65 sm:w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -53,7 +53,7 @@
             <%= f.label :address, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :address, id: "address", class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
+          <%= f.text_field :address, id: "address", class: "w-65 sm:w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
         </div>
 
         <%= f.hidden_field :latitude, id: "latitude" %>
@@ -63,7 +63,7 @@
     <div class="actions flex justify-center">
       <%= f.submit "投稿", class: "mt-4 w-40 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
     </div>
-<% end %>
+  <% end %>
 </div>
 
 
