--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -1,14 +1,16 @@
-<div class="flex flex-wrap gap-4 justify-center items-center">
-  <%= search_form_for q, url: url do |f| %>
+<div class="justify-items-center">
+  <%= search_form_for q, url: url, class: "flex flex-col lg:flex-row lg:gap-2" do |f| %>
     <% if current_user && current_page?(my_posts_user_path(current_user))%>
-      <%= f.date_field :created_at_gteq, include_blank: true, class: "p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
-      ～
-      <%= f.date_field :created_at_lteq_end_of_day, include_blank: true, class: "p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
+      <div>
+        <%= f.date_field :created_at_gteq, include_blank: true, class: "p-2 w-auto lg:w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
+        ～
+        <%= f.date_field :created_at_lteq_end_of_day, include_blank: true, class: "p-2 w-auto lg:w-30 w-auto bg-stone-50 border border-yellow-950 rounded-md" %>
+      </div>
     <% end %>
-    <%= f.select :address_cont, Prefecture.list, { include_blank: " 都道府県" }, class: "p-2 w-25 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.search_field :title_cont, placeholder: " メニュー名", class: "p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mr-1 p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.search_field :title_or_body_or_tags_name_cont, placeholder: " キーワード", class: "p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.submit "検索", class: "rounded-md bg-yellow-900 py-2 px-3 text-white focus:outline-none cursor-pointer" %>
+    <%= f.select :address_cont, Prefecture.list, { include_blank: " 都道府県" }, class: "p-2 mt-2 lg:mt-0 w-74 lg:w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :title_cont, placeholder: " メニュー名", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :title_or_body_or_tags_name_cont, placeholder: " キーワード", class: "mt-2 lg:mt-0 p-2 w-74 lg:w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.submit "検索", class: "mt-2 lg:mt-0 rounded-md bg-yellow-900 py-2 px-3 text-white focus:outline-none cursor-pointer" %>
   <% end %>
 </div>
