--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,19 @@
 <%= render "shared/flash_messages" %>
-<div class="container mx-auto px-5 py-15 my-15 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen max-w-screen-lg">
-  <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
-    <div class="mb-10">
-      <% if @post.image.attached? %>
+<div class="w-[90%] min-h-screen md:max-w-screen-lg container mx-auto px-5 py-15 my-15 bg-white shadow-sm shadow-2xs rounded-xl">
+  <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
+    <div class="col-span-2 md:col-span-1 flex justify-center">
+      <% if @post.persisted? %>
         <%= image_tag(@post.image.variant(resize_to_fill: [360, 360]), class:"rounded-xl") %>
       <% else %>
         <%= image_tag 'No_Image.png', class:"rounded-xl transition duration-300 group-hover:scale-105" %>
       <% end %>
     </div>
-
-    <div class="justify-self-start col-span-1">
-      <div class="flex justify-between items-center w-110">
-        <div class="text-2xl font-bold text-gray-800">
-          <%= @post.title %>
-        </div>
+    <div class="col-span-1 mt-6 md:mt-0 flex flex-col justify-start md:w-105 md:mr-8">
+      <div class="mb-5 flex flex-col">
+        <div class="flex md:justify-between items-center">
+          <div class="text-2xl font-bold text-gray-800 mr-4 md:mr-0">
+            <%= @post.title %>
+          </div>
         <% if current_user %>
           <% if current_user.notown?(@post) %>
             <div>
@@ -45,20 +45,23 @@
         <% end %>
       </div>
     </div>
+  </div>
 
-    <div class="ml-18 col-span-2 justify-self-start">
-      <div class="flex-col text-base font-bold text-yellow-950">
-        <%= @post.spot %>
-      </div>
-      <div class="flex">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-1 size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z" />
-        </svg><span class="mt-1"><%= @post.address %></span>
+    <div class="mt-10 col-span-2 lg:ml-12 lg:col-span-1">
+      <div class="mx-auto flex flex-col items-center justify-center lg:items-start">
+        <div class="sm:text-base font-bold text-yellow-950">
+          <%= @post.spot %>
+        </div>
+        <div class="flex">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-1 size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z" />
+          </svg><span class="mt-1"><%= @post.address %></span>
+        </div>
       </div>
     </div>
 
     <div class="col-span-2">
-      <div id="map" style="width: 850px; height: 400px;" class="mt-6 mb-6 rounded-xl"></div>
+      <div id="map" class="w-65 h-60 sm:w-[500px] md:h-[300px] lg:w-[850px] lg:h-[400px] mt-6 mb-6 rounded-xl"></div>
     </div>
   </div>
 
