--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,14 +5,41 @@
         <%= image_tag "header_logo.png", width: 250 %>
       <% end %>
     </div>
-    <ul class="flex mr-4 text-yellow-50 text-sm">
-      <%= link_to '投稿する', new_post_path, class: "brown-button" %>
-      <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
-      <%= link_to 'お気に入り', likes_posts_path, class: "brown-button" %>
-      <%= link_to 'スイーツ診断', new_diagnose_path, class: "brown-button" %>
-      <%= link_to 'マイページ', user_path(current_user.id), class: "brown-button" %>
-      <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "brown-button" %>
-    </ul>
+
+    <div class="xl:flex">
+      <ul class="flex mr-4 text-yellow-50 text-sm font-semibold">
+        <%= link_to '投稿する', new_post_path, class: "brown-button" %>
+        <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
+        <%= link_to 'お気に入り', likes_posts_path, class: "brown-button" %>
+        <%= link_to 'スイーツ診断', new_diagnose_path, class: "brown-button" %>
+        <%= link_to 'マイページ', user_path(current_user.id), class: "brown-button" %>
+        <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "brown-button" %>
+      </ul>
+    </div>
+
+    <div class="hidden mr-4">
+      <button class="outline-none menu-button">
+          <svg class="w-6 h-6 text-yellow-900 hover:text-yellow-700" x-show="! showMenu" fill="none" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2" viewBox="0 00 24 24" stroke="currentColor">
+            <path d="m4 6h16M4 12h16M4 18h16">
+            <path>
+          </svg>
+      </button>
+    </div>
+
+    <div class="hidden mobile-menu py-4 rounded-md mx-auto">
+      <ul class="flex flex-col justify-center items-center px-4 py-4 text-sm text-yellow-50 font-semibold">
+        <div class="grid grid-cols-2 gap-2">
+          <%= link_to '投稿する', new_post_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+          <%= link_to '投稿一覧', posts_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+          <%= link_to 'お気に入り', likes_posts_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+          <%= link_to 'スイーツ診断', new_diagnose_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+          <%= link_to 'マイページ', user_path(current_user.id), class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+          <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-start block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
+        </div>
+      </ul>
+    </div>
+
   </nav>
   <div class="flex justify-center">
     <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
