--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,11 +8,11 @@
 
     <div class="hidden lg:flex">
       <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
-        <%= link_to '投稿する', new_post_path, class: "brown-button" %>
-        <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
-        <%= link_to 'お気に入り', likes_posts_path, class: "brown-button" %>
-        <%= link_to 'スイーツ診断', new_diagnose_path, class: "brown-button" %>
-        <%= link_to 'マイページ', user_path(current_user.id), class: "brown-button" %>
+        <%= link_to '投稿する', new_post_path, class: "#{current_page?(new_post_path) ? "current-brown-button" : "brown-button"}" %>
+        <%= link_to '投稿一覧', posts_path, class: "#{current_page?(posts_path) ? "current-brown-button" : "brown-button"}" %>
+        <%= link_to 'お気に入り', likes_posts_path, class: "#{current_page?(likes_posts_path) ? "current-brown-button" : "brown-button"}" %>
+        <%= link_to 'スイーツ診断', new_diagnose_path, class: "#{current_page?(new_diagnose_path) ? "current-brown-button" : "brown-button"}" %>
+        <%= link_to 'マイページ', user_path(current_user.id), class: "#{current_page?(user_path(current_user.id)) ? "current-brown-button" : "brown-button"}" %>
         <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "brown-button cursor-pointer" %>
       </ul>
     </div>
@@ -29,7 +29,7 @@
     </nav>
   </nav>
   <ul id="minimenu" class="hidden mx-auto w-full bg-yellow-900 text-center text-yellow-50 font-semibold">
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿する', new_post_path%></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿する', new_post_path %></li>
     <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿一覧', posts_path %></li>
     <li class= "p-2 hover:bg-yellow-700"><%= link_to 'お気に入り', likes_posts_path %></li>
     <li class= "p-2 hover:bg-yellow-700"><%= link_to 'スイーツ診断', new_diagnose_path %></li>
